feat: modificações finais
